Fixed images not showing up on mobile

--- a/_sass/layout/_blog.sass
+++ b/_sass/layout/_blog.sass
@@ -29,7 +29,6 @@
 
     .header-image
       width: 100%
-      height: 25vh
       margin-bottom: 16px
       border-radius: 8px
       background: $main-color
