--- a/_sass/layout/_main.sass
+++ b/_sass/layout/_main.sass
@@ -15,6 +15,7 @@
     .header-image
       display: block
       flex: 1
+      height: 25vh
       padding-right: 0
       padding-bottom: 1em
       box-sizing: border-box
